<resources>
    <string name="app_name">MRF-Police Mitra</string>
    <string name="home">Home</string>
    <string name="about">About Us</string>
    <string name="Support">Support</string>
    <string name="help">HELP</string>
    <string name="rate_us">Rate Us</string>
    <string name="english">English</string>
    <string name="hindi">हिंदी</string>
    <string name="navigation_drawer_open">Open navigation drawe</string>
    <string name="navigation_drawer_close">Close navigation drawe</string>
    <string name="mrf">MRF-Police Mitra </string>
    <string name="training">TRAINING</string>
    <string name="sops">SOPs</string>
    <string name="cdcom">MRF-COMM</string>
    <string name="firstaid">FIRST-AID</string>
    <string name="fire">FIRE</string>
    <string name="resque">RESCUE</string>
    <string name="contact">CONTACT US</string>
    <string name="disaster">DISASTER</string>
    <string name="corgans">MRF-ORGN</string>
    <string name="order">ORDERS/CIRCULARS</string>
    <string name="selfdefence">SELF DEFENCE</string>
    <string name="nearbyhospital">NEARBY HOSPITALS</string>
    <string name="nearbycdofc">NEARBY CD-OFFICE</string>
    <string name="nearbypolice">NEARBY POLICE STATION</string>
    <string name="cdblog">MRF Blog</string>
    <string name="apply">Apply Online For Civil Defence</string>
    <string name="police">Police Clearance certificate</string>
    <string name="privacy">Privacy policy</string>
    <string name="organ">MRF-ORGN</string>
    <string name="orderss">Orders/Circulars</string>
    <string name="training2">Training</string>
    <string name="help2">Help</string>
    <string name="cdcom2">MRF-Comm</string>
    <string name="fire2">Fire</string>
    <string name="resque2">Rescue</string>
    <string name="firstaid2">First-Aid</string>
    <string name="disaster2">Disaster</string>
    <string name="selfdefence2">Self Defence</string>
    <string name="contact2">Contact Us</string>
    <string name="nearbyhospital2">Nearby Hospitals</string>
    <string name="nearbycdofc2">Nearby MRF-Office</string>
    <string name="marathi">मराठी</string>
    <string name="courtesy">Courtesy-Delhi Civil Defence</string>
    <string name="mitra">महाराष्ट्र रक्षक शक्ती</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="signup">" Sign Up"</string>
    <string name="email_mobile_number">USER ID</string>
    <string name="enter_your_email_mobile_number">Enter mobile number</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="login">LOGIN</string>
    <string name="alreadyhaveacc">Already have an account?</string>
    <string name="signin">Sign-in</string>
    <string name="name">Name</string>
    <string name="entername">Enter your name</string>
    <string name="email">Email</string>
    <string name="entermail">Enter your email</string>
    <string name="contactno">Contact NUMBER</string>
    <string name="entercontact">Enter contact no</string>
    <string name="address">Address</string>
    <string name="enteraddress">Enter your full address</string>
    <string name="passwords">Password</string>
    <string name="terms">I have read terms and Conditions.</string>
    <string name="profile">Profile</string>
    <string name="report">REPORT</string>
    <string name="photo">Photo</string>
    <string name="uploadphoto">Upload photo</string>
    <string name="news">News letter</string>
    <string name="notification">Notifications</string>
    <string name="logout">Logout</string>
    <string name="invalid_name">Please enter a valid name</string>
    <string name="invalid_PhoneNumber">Please enter a valid mobile number</string>
    <string name="invalid_Email">Please enter a valid email</string>
    <string name="invalid_address">Please enter your address</string>
    <string name="invalid_Password">Please enter valid password</string>
    <string name="invalid_photo">Please select image</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="alert">Confirmation Alert</string>
    <string name="SOPs">SOPs</string>
    <string name="user_profile">Your Profile</string>
    <string name="change_profile">Update Profile Details</string>
    <string name="cont">Phone Number</string>
    <string name="upload">Please upload Photo</string>
    <string name="allindia">ALL INDIA HELPLINE</string>
    <string name="womenhelp">WOMEN HELPLINE</string>
    <string name="district">DISTRICT OFFICE HELPLINE</string>
    <string name="registerno">Reg. Number</string>
    <string name="update">Update Profile</string>
    <string name="savedetails">Save Details</string>
    <string name="passwordtext">Dear Customer\n Your password has been sent to your registered email id.\n Please check your email for confirmation and Do not share it to others.</string>
    <string name="ok">Ok</string>
    <string name="idcard">ID_Card</string>
    <string name="mobile">Mobile</string>
    <string name="fathername">Fathers Name</string>
    <string name="mothername">Mothers Name</string>
    <string name="pleaseapplyfirst">Please Apply First</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="delhidefence">"Delhi Civil Defence"</string>
    <string name="chosephoto">Choose Image</string>
    <string name="sendreport">Send Report</string>
    <string name="description">Enter report description here...</string>
    <string name="place">Enter report location</string>
    <string name="delhohospital">DELHI HOSPITAL</string>
    <string name="update_check">Check for Update</string>
    <string name="newsdetails">News Details</string>
    <string name="nodata">Looks like there aren\'t any\n data available in this section </string>
    <string name="notice">Notice/Order</string>
    <string name="pleasewait">Please wait...</string>
    <string name="loading">While we load your data.</string>
</resources>