<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_baseline_account_box_24"
        android:title="@string/about" />

    <item
        android:id="@+id/nav_support"
        android:icon="@drawable/ic_baseline_sports_soccer_24"
        android:title="@string/Support" />
    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/ic_baseline_help_24"
        android:title="@string/help" />
    <item
        android:id="@+id/nav_rate"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/rate_us" />

   <!-- <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_baseline_power_settings_new_24"
        android:title="Log Out" />-->

</menu>
