<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/edit_border"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/img"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_180sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/ic_baseline_add_photo_alternate_24"
            tools:ignore="VectorDrawableCompat" />
        <Button
            android:layout_below="@+id/img"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/button_border"
            android:textColor="#fff"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/_14sdp"
            android:textAllCaps="false"
            android:text="@string/chosephoto"
            android:id="@+id/browse"/>

        <EditText
            android:hint="@string/description"
            android:id="@+id/tvReport"
            android:background="@drawable/edit_border"
            android:layout_below="@+id/browse"
            android:layout_width="match_parent"
            android:gravity="start"
            android:layout_height="@dimen/_150sdp"
            android:textSize="@dimen/_12sdp"
            android:layout_margin="@dimen/_15sdp"
            android:textColor="#000"/>
        <Button
            android:layout_below="@+id/tvReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sendreport"
            android:layout_marginLeft="@dimen/_50sdp"
            android:layout_marginRight="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColor="#ffffff"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:id="@+id/upload"/>
    </RelativeLayout>
    </ScrollView>

</LinearLayout>